[gd_scene load_steps=5 format=3 uid="uid://dv4dh7od01f2j"]

[ext_resource type="Script" path="res://ui/quota_obj_menu.gd" id="1_26gg5"]
[ext_resource type="Theme" uid="uid://boj0r13dv7qt3" path="res://ui/themes/main_theme.tres" id="1_ury0e"]
[ext_resource type="Texture2D" uid="uid://dfgnlhagp5hmu" path="res://item/texture/ItemPizza.png" id="2_d280k"]
[ext_resource type="Texture2D" uid="uid://dga4bvbr8vihx" path="res://item/texture/ItemTeddyBear.png" id="3_usx8t"]

[node name="QuotaObj_Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ury0e")
script = ExtResource("1_26gg5")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -500.0
offset_right = 240.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
alignment = 1

[node name="InventoryList" type="ItemList" parent="AspectRatioContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2
allow_reselect = true
item_count = 2
item_0/text = "Pizza"
item_0/icon = ExtResource("2_d280k")
item_1/text = "Bear"
item_1/icon = ExtResource("3_usx8t")

[node name="QuotaList" type="ItemList" parent="AspectRatioContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2
allow_reselect = true

[connection signal="item_clicked" from="AspectRatioContainer/HBoxContainer/InventoryList" to="." method="_on_inventory_list_item_clicked"]
[connection signal="item_selected" from="AspectRatioContainer/HBoxContainer/QuotaList" to="." method="_on_quota_list_item_selected"]
